--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel</title>
+    <link rel="icon" href="/assets/img/pexels-taryn-elliott-3889987.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="/assets/base.css">
@@ -22,8 +23,8 @@
                     <img src="/assets/img/logo.png" alt="" class="header-logo-img">
                 </a>
                 <ul class="nav">
-                    <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/" class="nav-a">home</a></li>
-                    <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-2/" class="nav-a">Packages</a>
+                    <li><a href="#" class="nav-a">home</a></li>
+                    <li><a href="#packages" class="nav-a">Packages</a>
                         <ul class="subnav">
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-2/" class="subnav-a">Search 1 <span>HOT</span> </a></li>
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-1/" class="subnav-a">Search 2</a></li>
@@ -32,7 +33,7 @@
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/typologies/sport/" class="subnav-a">Typology</a></li>
                         </ul>
                     </li>
-                    <li><a href="" class="nav-a">shop</a>
+                    <li><a href="#shop" class="nav-a">shop</a>
                         <ul class="subnav">
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-2/" class="subnav-a">Search 1 <span>HOT</span> </a></li>
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-1/" class="subnav-a">Search 2</a></li>
@@ -40,7 +41,7 @@
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/destinations/europe-2/" class="subnav-a">Destination</a></li>
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/typologies/sport/" class="subnav-a">Typology</a></li>
                         </ul></li>
-                    <li><a href="" class="nav-a">About us</a>
+                    <li><a href="#about us" class="nav-a">About us</a>
                         <ul class="subnav">
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-2/" class="subnav-a">Search 1 <span>HOT</span> </a></li>
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-1/" class="subnav-a">Search 2</a></li>
@@ -48,7 +49,7 @@
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/destinations/europe-2/" class="subnav-a">Destination</a></li>
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/typologies/sport/" class="subnav-a">Typology</a></li>
                         </ul></li>
-                    <li><a href="" class="nav-a">pages</a>
+                    <li><a href="#pages" class="nav-a">pages</a>
                         <ul class="subnav">
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-2/" class="subnav-a">Search 1 <span>HOT</span> </a></li>
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-1/" class="subnav-a">Search 2</a></li>
@@ -56,7 +57,7 @@
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/destinations/europe-2/" class="subnav-a">Destination</a></li>
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/typologies/sport/" class="subnav-a">Typology</a></li>
                         </ul></li>
-                    <li><a href="" class="nav-a">news</a>
+                    <li><a href="#news" class="nav-a">news</a>
                         <ul class="subnav">
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-2/" class="subnav-a">Search 1 <span>HOT</span> </a></li>
                             <li><a href="http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/search-1/" class="subnav-a">Search 2</a></li>
@@ -88,7 +89,7 @@
                 <div class="slide-img"></div>
             </div>
             <!-- place -->
-            <div class="grid place1000">
+            <div id="packages" class="grid place1000">
                 <div class="slider__content">
                     
                         <div class="slider__content-heading">
@@ -299,7 +300,7 @@
                 </div>
             </div>
             <!-- bridge -->
-            <div class="grid-full-width grid-full-width--bridge ">
+            <div id="shop" class="grid-full-width grid-full-width--bridge ">
                 <img src="/assets/img/bridge.jpg" alt="" class="bridge">
                 <div class="bridge-content-btn">
                     <div class="bridge-content">
@@ -312,7 +313,7 @@
                 </div>
             </div>
             <!-- beaches -->
-            <div class="grid height">
+            <div id="about us" class="grid height">
                 <div class="beaches">
                     <div class="beaches__content">
                         <h3 class="beaches-h3" >NORTH AMERICA</h3>
@@ -378,7 +379,7 @@
                 </div>
             </div>
             <!-- Discover -->
-            <div class="row">
+            <div id="pages" class="row">
                 <div class="col-2 discover-content-1">
                     <div class="discover-cities"></div>
                     <div class="discover-box">
@@ -399,7 +400,7 @@
                 </div>
             </div>
             <!-- OUR PACKAGES -->
-            <div class="grid">
+            <div id="news" class="grid">
                 <div class="grid-content">
                     <div class="content-page">
                         <div class="top-heading">PROMOTIONS</div>
