--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="col-3">
                         <div class="place">
                             
-                                <img src="/assets/img/italy.jpg" alt="" class="place-img">
+                                <img src="/assets/img/destination-10.jpg" alt="Italy" class="place-img">
                                 <div class="place-img-background">
                                     
                                 </div>
